// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading dynamic color 1`] = `
<h3
  class="sc-dkzDqf crcEiQ"
  color="deeppink"
  data-testid="heading"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 1`] = `
<h3
  class="sc-dkzDqf EcPsp"
  data-testid="heading"
  scale="100"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 2`] = `
<h3
  class="sc-dkzDqf cDVHfq"
  data-testid="heading"
  scale="200"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 3`] = `
<h3
  class="sc-dkzDqf dOTpKf"
  data-testid="heading"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 4`] = `
<h3
  class="sc-dkzDqf jNBFDo"
  data-testid="heading"
  scale="400"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 5`] = `
<h3
  class="sc-dkzDqf kYzoid"
  data-testid="heading"
  scale="500"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 6`] = `
<h3
  class="sc-dkzDqf bIWwwi"
  data-testid="heading"
  scale="600"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 7`] = `
<h3
  class="sc-dkzDqf cTUfaX"
  data-testid="heading"
  scale="700"
>
  Heller UI
</h3>
`;

exports[`Heading font weight 8`] = `
<h3
  class="sc-dkzDqf hbuLRI"
  data-testid="heading"
  scale="800"
>
  Heller UI
</h3>
`;

exports[`Heading h1 - h6 snapshots 1`] = `
<h1
  class="sc-bczRLJ ihptbP"
  data-testid="heading"
  scale="300"
>
  Heller UI
</h1>
`;

exports[`Heading h1 - h6 snapshots 2`] = `
<h2
  class="sc-gsnTZi cynywS"
  data-testid="heading"
  scale="300"
>
  Heller UI
</h2>
`;

exports[`Heading h1 - h6 snapshots 3`] = `
<h3
  class="sc-dkzDqf dOTpKf"
  data-testid="heading"
  scale="300"
>
  Heller UI
</h3>
`;

exports[`Heading h1 - h6 snapshots 4`] = `
<h4
  class="sc-hKMtZM inZEFP"
  data-testid="heading"
  scale="300"
>
  Heller UI
</h4>
`;

exports[`Heading h1 - h6 snapshots 5`] = `
<h5
  class="sc-eCYdqJ hXDmpu"
  data-testid="heading"
  scale="300"
>
  Heller UI
</h5>
`;

exports[`Heading h1 - h6 snapshots 6`] = `
<h6
  class="sc-jSMfEi TLEWf"
  data-testid="heading"
  scale="300"
>
  Heller UI
</h6>
`;
